--- a/Blog/templates/Blog/post_detail.html
+++ b/Blog/templates/Blog/post_detail.html
@@ -1,5 +1,6 @@
 {% extends "Blog/base.html" %}
 {% load static %}
+{% load cool_num %}
 {% block content %}
 <div id="article-share-container">
     <div id="share">
@@ -20,7 +21,7 @@
                     <div class="article-info">
                         <a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a>
                         <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-                        <small class="text-muted">views: {{post.hits}}</small>
+                        <small class="text-muted" title={{post.hits}}>views: {{post.hits|cool_num}}</small>
                         {% if post.author == user %}
                             <div id="post-options">
                                 <a class="btn btn-secondary btn-sm mt-1 mb-1 ml-2" href="{% url 'Blog:post-update' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}">Update</a>
