--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -1,3 +1,4 @@
+{% load cool_num %}
 {% for post in posts %}
 <div class="row media content-section article-list">
     <div class="article-thumbnail col-md-3">
@@ -18,7 +19,7 @@
                 <div class="article-metadata">
                     <small><a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a></small>
                     <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-                    <small class="text-muted ml-4">views:{{post.hits}}</small>
+                    <small class="text-muted ml-4" title={{post.hits}}>views:{{post.hits|cool_num}}</small>
                 </div>
             </div>
         </div>
