--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -19,7 +19,7 @@
                 <div class="article-metadata">
                     <small><a class="mr-2" href="{% url 'Blog:user-posts' post.author.username %}">{{ post.author }}</a></small>
                     <small class="text-muted">{{ post.date_posted|date:"j M Y" }}</small>
-                    <small class="text-muted ml-4" title={{ post.hits }}>views:{{ post.hits|cool_num }}</small>
+                    <small class="text-muted ml-4" title={{ post.views }}>views:{{ post.views|cool_num }}</small>
                 </div>
             </div>
         </div>
