--- a/Blog/templates/post_list_home.html
+++ b/Blog/templates/post_list_home.html
@@ -4,13 +4,13 @@
     <div class="article-thumbnail col-md-3">
         <img src={{ post.thumbnail.url }} alt="{{post.title}}" title="{{post.title}}">
     </div>
-    <div id="details" class="col-md-9">
+    <div class="details col-md-9">
         <div class="media-body article-contents">
-            <div id="article-details">
+            <div class="article-details">
                 <h4><a class="article-title" href="{% url 'Blog:post-detail' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}">{{ post.title }}</a></h4>
                 {% comment %} <p class="article-short-des">{{ post.short_des|truncatewords_html:'50'|safe }}</p> {% endcomment %}
                 <div class="article-short-des" style="display:inline">
-                    {{ post.content|truncatewords_html:'50'|safe }}&nbsp
+                    {{ post.content|truncatewords_html:'50'|safe }}&nbsp;
                     <a style="display:inline-block" href="{% url 'Blog:post-detail' post.date_posted.year post.date_posted.month post.date_posted.day post.slug %}">Read more</a>
                 </div>
                 <div class="tags">
