--- a/Blog/templates/Blog/footer.html
+++ b/Blog/templates/Blog/footer.html
@@ -53,7 +53,7 @@
         </div>
         </div>
         <div class="made-with-love">
-            <h6>Made with ❤️ from <a href="http://wikipedia.com/tetarpur" target="_blank" alt="Tetarpur">Tetarpur</a></h6>
+            <h6>Made with ❤️ from <a href="http://wikipedia.com/tetarpur" target="_blank" title="Tetarpur">Tetarpur</a></h6>
         </div>
     </div>
 </footer>
