--- a/Blog/templates/heading.html
+++ b/Blog/templates/heading.html
@@ -1,4 +1,4 @@
 <div class="heading">
     <legend class="latest">{{heading|title}}</legend>
-    <a href="{{ view_more_url|default:"#" }}" class="btn btn-primary view-more" role="button">View More</a>
+    <a href="{{ view_more_url|default:"#" }}" title="View more" class="btn btn-primary view-more" role="button">View More</a>
 </div>
