--- a/Users/templates/Users/login.html
+++ b/Users/templates/Users/login.html
@@ -12,13 +12,13 @@
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Log In</button>
             <small class="text-muted ml-2">
-                <a href="{% url 'password_reset' %}">Forgot Password</a>
+                <a href="{% url 'password_reset' %}" title="Forgot Password">Forgot Password</a>
             </small>
         </div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need an account? <a class="ml-2" href="{% url 'register' %}">Register</a>
+            Need an account? <a class="ml-2" href="{% url 'register' %}" title="Register">Register</a>
         </small>
     </div>
 </div>
