--- a/Users/templates/Users/password_reset_complete.html
+++ b/Users/templates/Users/password_reset_complete.html
@@ -4,5 +4,5 @@
 <div class="alert alert-info">
     Your password has been reset successfully
 </div>
-<a href="{% url 'login' %}">Log in</a>
+<a href="{% url 'login' %}" title="Log in">Log in</a>
 {% endblock content %}
