Trending Posts is the active tab on the sidebar
fixed #84

--- a/Blog/templates/Blog/base.html
+++ b/Blog/templates/Blog/base.html
@@ -80,18 +80,18 @@
                     <ul class="list-group">
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item">
-                                <a class="nav-link active" id="latest-posts-tab" data-toggle="tab" href="#latest-posts" role="tab" aria-controls="latest-posts" aria-selected="true" title="Latest Posts">Latest Posts</a>
+                                <a class="nav-link active" id="trending-posts-tab" data-toggle="tab" href="#trending-posts" role="tab" aria-controls="trending-posts" aria-selected="true" title="Trending Posts">Trending Posts</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="trending-posts-tab" data-toggle="tab" href="#trending-posts" role="tab" aria-controls="trending-posts" aria-selected="false" title="Trending Posts">Trending Posts</a>
+                                <a class="nav-link" id="latest-posts-tab" data-toggle="tab" href="#latest-posts" role="tab" aria-controls="latest-posts" aria-selected="false" title="Latest Posts">Latest Posts</a>
                             </li>
                         </ul>
                         <div class="tab-content list-group-item list-group-item-light">
-                            <li id="latest-posts" class="tab-pane fade show active" role="tabpanel" aria-labelledby="latest-posts-tab" data-url='{% url "Blog:latest-posts" %}'></li>
-                            <li id="trending-posts" class="tab-pane fade" role="tabpanel" aria-labelledby="trending-posts-tab" data-url='{% url "Blog:trending-posts" %}'></li>
+                            <li id="latest-posts" class="tab-pane fade" role="tabpanel" aria-labelledby="latest-posts-tab" data-url='{% url "Blog:latest-posts" %}'></li>
+                            <li id="trending-posts" class="tab-pane fade show active" role="tabpanel" aria-labelledby="trending-posts-tab" data-url='{% url "Blog:trending-posts" %}'></li>
                         </div>
-                        <li id="top-categories" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-categories" %}'>Top Categories<br></li>
                         <li id="top-tags" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-tags" %}'>Top Tags<br></li>
+                        <li id="top-categories" class="list-group-item list-group-item-light" data-url='{% url "Blog:all-categories" %}'>Top Categories<br></li>
                     </ul>
                 </div>
             </div>
